@@ -317,7 +317,7 @@ cumsum
   `[1,3,6,10]'.
 
  SEE ALSO
-  sum
+  sum, sumsq
 
 --------------------------------------------------------------
 
@@ -626,7 +626,34 @@ sum
 
 
  SEE ALSO
-  cumsum, transpose, reshape
+  cumsum, sumsq, transpose, reshape
+
+--------------------------------------------------------------
+
+sum
+
+ SYNOPSIS
+  Sum over the squares of the elements of an array
+
+ USAGE
+  result = sumsq (Array_Type a [, Int_Type dim])
+
+ DESCRIPTION
+  The `sumsq' function sums over the squares of the elements of a
+  numeric array and returns its result.  If a second argument is
+  given, then it specifies the dimension of the array to be summed
+  over.  In this case, an array of dimension one less than that of the
+  input array will be returned.
+
+  If the input array is an integer type, then the resulting value will
+  be a Double_Type.  If the input array is a Float_Type,
+  then the result will be a Float_Type.
+
+  For complex arrays, the sum will be over the squares of the moduli of
+  the complex elements.
+
+ SEE ALSO
+  cumsum, sumsq, transpose, reshape
 
 --------------------------------------------------------------
 
